--- a/style.css
+++ b/style.css
@@ -48,9 +48,9 @@ body{
     font-size: 2rem;
 }
 
-.fa-gem {
+/* .fa-gem {
     margin-right: 0.5rem;
-}
+} */
 
 .navbar__menu{  
     display: flex;
@@ -59,7 +59,7 @@ body{
     text-align: center;
 }
 
-.navbar__item {
+.navbar_item {
     height: 80px;
 }
 
@@ -153,7 +153,7 @@ body{
         background: #fff;
     }
 
-    .navbar__item {
+    .navbar_item {
         width: 100%;
     }
 
@@ -208,7 +208,7 @@ body{
 }
 
 /* Hero Section CSS */
-.main {
+.hero {
     background-color: #141414;
 }
 
@@ -457,5 +457,98 @@ body{
 
     .services__card {
         width: 300px;
+    }
+}
+
+/* Footer Section */
+.footer__container{
+    background-color: #141414;
+    padding: 25rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#footer__logo{
+    color: #fff;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 2rem;
+}
+
+.footer__links{
+    width: 100%;
+    max-width: 1000px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer__link--wrapper{
+    display: flex;
+}
+
+.footer__link--items{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 16px;
+    text-align: left;
+    width: 140px;
+    box-sizing: border-box;
+}
+
+.footer__link--items h2{
+    margin-bottom: 16px;
+}
+
+.footer__link--items > h2{
+    color: #fff;
+}
+
+.footer__link--items a{
+    color: #fff;
+    text-decoration: none;
+    margin-bottom: 0.5rem;
+}
+
+.footer__link--items a:hover{
+    color: #e9e9e9;
+    transition: 0.3 ease-out;
+}
+
+@media screen and (max-width: 820px) {
+.footer__container{
+    padding: 0px;
+    margin-top: -150px;
+}
+
+.footer__links{
+    padding-top: 2rem;
+}
+
+#footer__logo{
+    margin-bottom: 2rem;
+}
+
+.footer__link--wrapper{
+    flex-direction: column;
+}
+.social__media--wrap{
+    flex-direction: column;
+}
+}
+
+@media screen and (max-width: 480px) {
+    .footer__container{
+        margin-top: -25px;
+    }
+
+    .footer__link--items{
+        margin: 0;
+        padding: 10px;
+        width: 100%;
     }
 }
