--- a/style.css
+++ b/style.css
@@ -463,7 +463,7 @@ body{
 /* Footer Section */
 .footer__container{
     background-color: #141414;
-    padding: 25rem 0;
+    margin-top: 25rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
